k8s/overlays/prd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    spec:
      containers:
      - name: app
        image: gcr.io/matopenkw/manifest:c3f0ba8
        ports:
        - containerPort: 8080
