k8s/overlays/prd/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: sample-ingress
    annotations:
        kubernetes.io/ingress.allow-http: "false"
        ingress.gcp.kubernetes.io/pre-shared-cert: "https-cert"
        kubernetes.io/ingress.global-static-ip-name: "matopenkw-api"
    labels:
        app: sample-ingress
spec:
    tls:
    - secretName: tls-secret
    backend:
        serviceName: sample-clusterip
        servicePort: 80
